--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 /* Attributes for whole page */
 body {
     font-family: "Poppins";
-    background-color: #c1dfff;
+    background-color: #B9D9EB;
 }
 
 /* No data after Filter Message */
@@ -34,24 +34,6 @@ body {
 }
 .sidebar:hover + .header .header_title {
     margin-left: 9.5rem;
-}
-
-/* child control dropdown */
-.child_control .mantine-Select-input {
-    background-color: transparent;
-    border: none;
-    text-align: center;
-}
-.child_control .mantine-Select-dropdown {
-    border: 1px solid black;
-}
-.child_control .mantine-Select-rightSection {
-    background-color: transparent;
-    pointer-events: none;
-}
-.child_control .mantine-Select-input:focus + .mantine-Select-rightSection {
-    transform: rotate(180deg);
-    transition: transform 0.3s;
 }
 
 /* filter container */
@@ -148,6 +130,59 @@ body {
 .time_control_information {
     font-size: 12px;
     font-family: "Poppins";
+}
+
+/* member dropdown */
+.member_dropdown_container {
+    position: relative;
+}
+.member_dropdown_label {
+    z-index: 1;
+    top: -20%;
+    left: 10%;
+    position: absolute;
+    padding: 0px 5px;
+    margin: 0px;
+    font-family: "Poppins";
+    font-size: 12px;
+    font-weight: 600;
+    color: black;
+    background-color: white;
+    border-radius: 2px 2px 0px 0px;
+}
+.member_dropdown_avatar {
+    font-size: 15px;
+    border: 2px solid black;
+}
+.member_dropdown {
+    border-radius: 8px;
+    align-items: center;
+}
+.member_dropdown .mantine-Select-input {
+    font-family: "Poppins";
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    border: 1px solid black;
+}
+.member_dropdown .mantine-Select-input:focus {
+    border: 1px solid black;
+}
+.member_dropdown .mantine-Select-dropdown {
+    border: 1px solid black;
+}
+.member_dropdown .mantine-Select-item {
+    font-family: "Poppins";
+    font-size: 14px;
+    font-weight: 500;
+}
+.member_dropdown .mantine-Select-rightSection {
+    background-color: transparent;
+    pointer-events: none;
+}
+.member_dropdown .mantine-Select-input:focus + .mantine-Select-rightSection {
+    transform: rotate(180deg);
+    transition: transform 0.3s;
 }
 
 /* platform dropdown */
@@ -304,7 +339,7 @@ body {
 .risk_categories_progress_bar_container {
     border: 3px solid #052F5F;
     border-radius: 5px;
-    background-color: #B9D9EB;
+    background-color: #c1dfff;
     margin: 10px;
     padding: 20px 0px 0px 0px;
     height: 100%;
@@ -323,6 +358,9 @@ body {
     color: black;
     font-size: 13px;
     font-family: "Poppins";
+}
+.risk_categories_progress_bar .mantine-Progress-bar {
+    border: 1.5px solid black;
 }
 .risk_categories_progress_legend {
     margin: 0px 20px;
