--- a/assets/style.css
+++ b/assets/style.css
@@ -392,6 +392,15 @@ body {
 .kpi_platform_count_elements:hover {
     transform: translateY(-5px);
 }
+.kpi_platform_comparison {
+    font-size:12px;
+    font-weight:600;
+    font-family: "Poppins";
+    text-align: center;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 5px;
+}
 
 /* progress bar */
 .risk_categories_progress_bar_container {
@@ -468,7 +477,7 @@ body {
     width: 16px;
     height: 16px;
 }
-.rc-slider-handle-dragging.rc-slider-handle-dragging.rc-slider-handle-dragging {
+.rc-slider-handle-dragging {
     box-shadow: 0 0 0 3px #96dbfa;
     margin-top: -5.5px;
     border-color: black;
@@ -492,6 +501,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: left;
     position: fixed;
     top: 0;
     left: 0;
@@ -502,10 +512,71 @@ body {
     z-index: 1050;
     transition: width 0.2s ease-in-out;
 }
+.sidebar_header {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
+    height: 60px;
+    margin-bottom: 10px;
+    position: relative;
+}
+.sidebar_header::after {
+    position: absolute;
+    content: "";
+    border: 4px solid #25D366;
+    border-radius: 5px;
+    width: 100%;
+    bottom: 0px;
+}
+/* width of collapsed sidebar - paddingLeft - paddingRight */
+.sidebar_header img {
+    width: 2.5rem;
+}
+.sidebar_header h2 {
+    font-family: "Poppins";
+    margin-left: 1rem;
+    visibility: hidden;
+    transition: visibility 0.2s ease-in-out;
+}
+.sidebar_navlink {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    overflow: hidden;
+    padding: 0px;
+}
+.sidebar_navlink_menu {
+    display: none;
+    transition: display 0.2s ease-in-out;
+}
 .sidebar_navlink_option {
     display: flex;
     justify-content: left;
     align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+/* width of collapsed sidebar - paddingLeft - paddingRight */
+.sidebar_navlink_option img {
+    width: 2.5rem;
+}
+.sidebar_navlink_option span {
+    visibility: hidden;
+    transition: visibility 0.2s ease-in-out;
+    color: white;
+}
+.sidebar_help {
+    width: 90%;
+    padding: 5px;
+    border-radius: 100%;
+    background-color: #25D366;
+    display: block;
+    transition: display 0.2s ease;
 }
 .sidebar_help_container {
     position: relative;
@@ -518,123 +589,42 @@ body {
     background-color: #2D96FF;
     border-radius: 5px;
     display: none;
-}
-.sidebar:hover .sidebar_help_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-@keyframes borderAnimation {
-    0% {
-    padding: 0px;
-    }
-    50% {
-    padding: 5px;
-    }
-    100% {
-    padding: 0px;
-    }
-}
-.sidebar_help {
-    animation: borderAnimation 1.8s infinite;
-}
-.sidebar:hover .sidebar_help {
-    display: none;
+    transition: display 0.2s ease;
 }
 
 /* when the user hovers on the sidebar, expand it */
 .sidebar:hover {
     width: 14rem;
 }
-
-/* make sure the contents of the navlink don't wrap when navbar collapses */
-.sidebar .nav-link {
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0;
-    padding: 0;
-}
-
-/* hide the navlink labels by default */
-.sidebar .nav-link span {
-    visibility: hidden;
-    transition: visibility 0.2s ease-in-out;
-    color: white;
-}
-.sidebar .nav-link img {
-    width: 2.5rem;
-}
-.sidebar p {
-    display: none;
-}
-
-/* when the sidebar is hovered, reveal the labels */
-.sidebar:hover .nav-link span {
-    visibility: visible;
-    transition: visibility 0.2s ease-in-out;
-    color: white;
-    font-family: "Poppins";
-    font-weight: 450;
-    margin-left: 1rem;
-}
-.sidebar:hover p {
-    font-family: "Poppins";
-    display: block;
-    visibility: visible;
-    opacity: 1;
-    margin-left: 0.2rem !important;
-}
-
-/* container for the sidebar header. make sure the contents don't wrap when
- * the sidebar is collapsed.
- */
-.sidebar_header {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    overflow: hidden;
-    white-space: nowrap;
-    height: 60px;
-}
-.sidebar_navlink {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-/* position the header relative to the logo and hide by default */
-.sidebar_header h2 {
-    font-family: "Poppins";
-    margin-left: 1rem;
-    margin-bottom: 0;
-    visibility: hidden;
-    transition: visibility 0.2s ease-in-out;
-}
-
-/* fix the width of the header logo */
-.sidebar_header img {
-    width: 2.5rem;
-}
-
-/* reveal the header when the sidebar is toggled */
 .sidebar:hover .sidebar_header h2 {
     visibility: visible;
-    transition: visibility 0.2s ease-in-out;
     color: #25D366;
     font-family: "Poppins";
     font-weight: "bold";
     font-size: 26;
 }
-
-/* position the content relative to the collapsed sidebar */
-.content {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    padding: 2rem 1rem;
+.sidebar:hover .sidebar_navlink_menu {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin: 10px 0px 0px 0px;
+    padding: 0px;
+}
+.sidebar:hover .sidebar_navlink_option span {
+    visibility: visible;
+    color: white;
+    font-family: "Poppins";
+    font-weight: 450;
+    margin-left: 1rem;
+}
+.sidebar:hover .sidebar_help {
+    display: none;
+}
+.sidebar:hover .sidebar_help_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Row 1 */
