--- a/assets/style.css
+++ b/assets/style.css
@@ -661,6 +661,17 @@ body {
     align-items: center;
 }
 
+/* Save As Image */
+.save_as_image {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: none;
+}
+.content_risk_classification_container:hover .save_as_image {
+    display: block;
+}
+
 /* Risk Bar Chart */
 .content_risk_bar_chart {
     font-family: "Poppins";
