--- a/assets/style.css
+++ b/assets/style.css
@@ -512,7 +512,7 @@ body {
     align-items: center;
     overflow: hidden;
     white-space: nowrap;
-    height: 60px;
+    height: 8.5vh;
     margin-bottom: 10px;
     position: relative;
 }
