--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ body {
 }
 .user_name {
     color: #25D366;
-    font-size: 20px;
+    font-size: 3vh;
     font-family: "Poppins";
     font-weight: 600;
     margin-left: 10px;
