--- a/assets/style.css
+++ b/assets/style.css
@@ -654,7 +654,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 /* Progress Bar */
