--- a/assets/style.css
+++ b/assets/style.css
@@ -650,11 +650,11 @@ body {
 /* Radial Chart */
 .content_classification_radial_chart {
     font-family: "Poppins";
-    background-color: red;
+    background-color: white;
     display: flex;
     flex-direction: column;
     flex: 1;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 /* Progress Bar */
