--- a/assets/style.css
+++ b/assets/style.css
@@ -651,10 +651,16 @@ body {
 .content_classification_radial_chart {
     font-family: "Poppins";
     background-color: white;
+    flex: 1;
     display: flex;
     flex-direction: column;
+}
+.content_classification_image {
     flex: 1;
-    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Progress Bar */
