--- a/assets/style.css
+++ b/assets/style.css
@@ -338,6 +338,7 @@ body {
     font-family: "Poppins";
     font-size: 14px;
     font-weight: 600;
+    color: black;
     margin: 0px 0px 2px 0px;
     text-align: center;
 }
@@ -345,24 +346,46 @@ body {
     font-family: "Poppins";
     font-size: 16px;
     font-weight: 600;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px;
+    padding-left: 50px;
 }
 .searchbar .mantine-Select-icon {
     background-color: #25D366;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px 0px 0px 5px;
+}
+.searchbar_container .mantine-Select-dropdown {
+    border: 2px solid black;
 }
 
 /* overview button */
-.overview_button {
-    color: #052F5F;
-    background-color: #25D366;
-    font-family: "Poppins";
-    font-size: 14px;
+.overview_info_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+.overview_avatar .mantine-Avatar-placeholder{
+    font-size: 30px;
     font-weight: 600;
-    border: 1px solid black;
-    border-radius: 5px;
+    font-family: "Poppins";
+    color: white;
+    background-color: #fa5252;
+    border: 2px solid black;
+}
+.overview_info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.overview_info_option {
+    display: flex;
+    flex-direction: row;
+}
+.overview_platform {
+    display: flex;
+    flex-direction: row;
 }
 
 /* kpi_alert_count */
@@ -506,7 +529,7 @@ body {
     font-family: "Poppins";
     color: black;
 }
-.risk_categories_progress_legend_avatar .mantine-ht4gsv {
+.risk_categories_progress_legend_avatar .mantine-Avatar-placeholder {
     font-size: 12px;
     font-weight: 600;
     font-family: "Poppins";
