--- a/assets/style.css
+++ b/assets/style.css
@@ -384,8 +384,11 @@ body {
     flex-direction: row;
 }
 .overview_platform {
-    display: flex;
-    flex-direction: row;
+    margin: 0px;
+    padding: 0px;
+}
+.overview_alert_option {
+    text-align: center;
 }
 
 /* kpi_alert_count */
